cluster/apps/nextcloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  labels:
    app.kubernetes.io/name: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nextcloud
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nextcloud
    spec:
      containers:
      - name: nextcloud
        image: nextcloud:21.0.2-apache
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 150Mi
        ports:
        - name: nextcloud-port
          protocol: TCP
          containerPort: 80
        volumeMounts:
        - name: nextcloud-config
          mountPath: /var/www/html
        - name: nextcloud-data
          mountPath: /var/www/data
        startupProbe:
          httpGet:
            path: /status.php
            port: nextcloud-port
            httpHeaders:
            - name: Host
              value: nextcloud.${SECRET_DOMAIN_0}
          initialDelaySeconds: 10
          timeoutSeconds: 5
          periodSeconds: 20
          successThreshold: 1
          failureThreshold: 30
        livenessProbe:
          httpGet:
            path: /status.php
            port: nextcloud-port
            httpHeaders:
            - name: Host
              value: nextcloud.${SECRET_DOMAIN_0}
          initialDelaySeconds: 10
          timeoutSeconds: 5
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /status.php
            port: nextcloud-port
            httpHeaders:
            - name: Host
              value: nextcloud.${SECRET_DOMAIN_0}
          initialDelaySeconds: 10
          timeoutSeconds: 5
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
      - name: nextcloud-cron
        image: nextcloud:21.0.2-apache
        imagePullPolicy: IfNotPresent
        command:
        - /cron.sh
        volumeMounts:
        - name: nextcloud-config
          mountPath: /var/www/html
        - name: nextcloud-data
          mountPath: /var/www/data
      volumes:
      - name: nextcloud-config
        persistentVolumeClaim:
          claimName: nextcloud-config
      - name: nextcloud-data
        persistentVolumeClaim:
          claimName: nextcloud-data
