cluster/apps/nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-svc
  labels:
    app.kubernetes.io/name: nextcloud
spec:
  selector:
    app.kubernetes.io/name: nextcloud
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: nextcloud-port
  type: ClusterIP
